--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [package]
 name = "rusty-req"
-version = "0.1.4"
+version = "0.1.5"
 edition = "2021"
-authors = ["kaysen <kaysen820@gmail.com>"]
+authors = [ "kaysen <kaysen820@gmail.com>",]
 description = "High-performance async HTTP client built with Rust for Python."
 license = "MIT"
 homepage = "https://github.com/KAY53N/rusty-req"
@@ -11,30 +11,26 @@ documentation = "https://github.com/KAY53N/rusty-req#readme"
 readme = "README.md"
 
 [build-system]
-requires = ["maturin>=1.4,<2.0"]
+requires = [ "maturin>=1.4,<2.0",]
 build-backend = "maturin"
 
 [project]
 name = "rusty-req"
-version = "0.1.4"
+version = "0.1.5"
 description = "High-performance async HTTP client built with Rust for Python."
 readme = "README.md"
-authors = [{ name = "KAY53N", email = "kaysen820@gmail.com" }]
 license = "MIT"
 requires-python = ">=3.7"
-classifiers = [
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Rust",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+classifiers = [ "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Rust", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
+[[project.authors]]
+name = "KAY53N"
+email = "kaysen820@gmail.com"
 
 [project.urls]
-"Homepage" = "https://github.com/KAY53N/rusty-req"
-"Repository" = "https://github.com/KAY53N/rusty-req"
+Homepage = "https://github.com/KAY53N/rusty-req"
+Repository = "https://github.com/KAY53N/rusty-req"
 "Bug Tracker" = "https://github.com/KAY53N/rusty-req/issues"
-"Documentation" = "https://github.com/KAY53N/rusty-req#readme"
+Documentation = "https://github.com/KAY53N/rusty-req#readme"
 
 [tool.maturin]
 bindings = "pyo3"
