--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,10 @@ jobs:
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: "'3.10"
+          python-version: ${{ matrix.python-version }}
+
+      - name: Upgrade pip
+        run: pip install --upgrade pip
 
       - name: Install maturin
         run: pip install maturin
@@ -34,5 +37,10 @@ jobs:
         env:
           CARGO_TERM_COLOR: always
           RUST_BACKTRACE: 1
-          PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}   # 需要提前设置 GitHub Secrets
-        run: maturin publish --skip-existing --manylinux off
+          PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          if [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+            maturin publish --skip-existing --manylinux off
+          else
+            maturin publish --skip-existing
+          fi
