--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,7 +111,7 @@ jobs:
       - name: List all wheels
         run: ls -lh dist
 
-      - name: Publish to PyPI
+      - name: Upload all wheels to PyPI
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        run: maturin publish --skip-existing --no-build --out dist
+        run: maturin upload --skip-existing dist/*
