--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,8 +81,43 @@ jobs:
           name: wheels-macos
           path: target/wheels/*.whl
 
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.12.10
+
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install maturin
+        run: python -m pip install maturin
+
+      - name: Build Rust Python extension
+        run: python -m maturin build --release
+
+      - name: List generated wheel files
+        run: dir /b target\wheels\*.whl || echo "No wheel files found"
+
+      - name: Upload wheels as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: wheels-windows
+          path: target\wheels\*.whl
+
   publish-to-pypi:
-    needs: [build-ubuntu, build-macos]
+    needs: [build-ubuntu, build-macos, build-windows]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
@@ -106,6 +141,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: wheels-macos
+          path: dist/
+
+      - name: Download Windows wheels
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-windows
           path: dist/
 
       - name: List all wheels
