--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "rusty-req"
 version = "0.1.9"
 edition = "2021"
 
+[lib]
+# 关键修改：声明为动态库，并启用 PyO3 的 abi3 模式
+crate-type = ["cdylib"]
+
 [dependencies]
 serde_json = "1.0"
 chrono = "0.4"
@@ -11,16 +15,16 @@ once_cell = "1.18"
 
 [dependencies.pyo3]
 version = "0.20"
-features = [ "extension-module",]
+features = ["extension-module", "abi3-py37"]  # 启用 abi3 支持 Python ≥ 3.7
 
 [dependencies.pyo3-asyncio]
 version = "0.20"
-features = [ "tokio-runtime",]
+features = ["tokio-runtime"]
 
 [dependencies.tokio]
 version = "1.0"
-features = [ "full",]
+features = ["full"]
 
 [dependencies.reqwest]
 version = "0.11"
-features = [ "json", "brotli", "gzip", "deflate", "stream",]
+features = ["json", "brotli", "gzip", "deflate", "stream"]
