--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Setup Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.10.12"  # 明确指定 3.10 的最新补丁版本
 
       - name: Install build tools
         run: |
@@ -32,7 +32,7 @@ jobs:
           pip install maturin
 
       - name: Build Linux wheel
-        run: maturin build --release --abi --compatibility manylinux2014 --python-requires ">=3.10"
+        run: maturin build --release --compatibility manylinux2014 --python-requires "==3.10.*"  # 严格限制 3.10
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -55,7 +55,7 @@ jobs:
       - name: Setup Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.10.12"
 
       - name: Install build tools
         run: |
@@ -63,7 +63,7 @@ jobs:
           pip install maturin
 
       - name: Build macOS wheel
-        run: maturin build --release --abi --compatibility universal2 --python-requires ">=3.10"
+        run: maturin build --release --compatibility universal2 --python-requires "==3.10.*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -87,7 +87,7 @@ jobs:
       - name: Setup Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.10.12"
 
       - name: Install build tools
         run: |
@@ -95,7 +95,7 @@ jobs:
           python -m pip install maturin
 
       - name: Build Windows wheel
-        run: maturin build --release --abi --python-requires ">=3.10"
+        run: maturin build --release --python-requires "==3.10.*"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
