--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,10 @@ on:
       - main
 
 jobs:
-  build-linux:
+  build-ubuntu:
     runs-on: ubuntu-latest
+    outputs:
+      wheel_name: ${{ steps.get-wheel.outputs.name }}
     steps:
       - uses: actions/checkout@v4
 
@@ -21,23 +23,27 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10.12"  # 明确指定 3.10 的最新补丁版本
+          python-version: 3.11.3
 
-      - name: Install build tools
-        run: |
-          pip install --upgrade pip
-          pip install maturin
+      - name: Upgrade pip
+        run: pip install --upgrade pip
 
-      - name: Build Linux wheel
-        run: maturin build --release --compatibility manylinux2014 --python-requires "==3.10.*"  # 严格限制 3.10
+      - name: Install maturin
+        run: pip install maturin
 
-      - name: Upload artifact
+      - name: Build Rust Python extension
+        run: maturin build --release
+
+      - name: List generated wheel files
+        run: ls -lh target/wheels/*.whl || echo "No wheel files found"
+
+      - name: Upload wheels as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: wheels-linux
+          name: wheels-ubuntu
           path: target/wheels/*.whl
 
   build-macos:
@@ -52,20 +58,24 @@ jobs:
           toolchain: stable
           override: true
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10.12"
+          python-version: 3.11.3
 
-      - name: Install build tools
-        run: |
-          pip install --upgrade pip
-          pip install maturin
+      - name: Upgrade pip
+        run: pip install --upgrade pip
 
-      - name: Build macOS wheel
-        run: maturin build --release --compatibility universal2 --python-requires "==3.10.*"
+      - name: Install maturin
+        run: pip install maturin
 
-      - name: Upload artifact
+      - name: Build Rust Python extension
+        run: maturin build --release
+
+      - name: List generated wheel files
+        run: ls -lh target/wheels/*.whl || echo "No wheel files found"
+
+      - name: Upload wheels as artifact
         uses: actions/upload-artifact@v4
         with:
           name: wheels-macos
@@ -84,20 +94,37 @@ jobs:
           override: true
           components: rust-analyzer, rust-src
 
-      - name: Setup Python 3.10
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10.12"
+          python-version: 3.11.3
 
-      - name: Install build tools
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install maturin
+        run: python -m pip install maturin
+
+      - name: Build Rust Python extension
+        run: python -m maturin build --release
+
+      - name: List generated wheel files
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install maturin
+          $wheels = Get-ChildItem -Path "target\wheels\*.whl" -ErrorAction SilentlyContinue
+          if ($wheels) {
+              $wheels | ForEach-Object { Write-Output "Found wheel: $_" }
+          } else {
+              Write-Output "No wheel files found in target\wheels"
+              # Check alternative location
+              $altWheels = Get-ChildItem -Path "target\release\wheels\*.whl" -ErrorAction SilentlyContinue
+              if ($altWheels) {
+                  $altWheels | ForEach-Object { Write-Output "Found wheel in alternative location: $_" }
+              } else {
+                  Write-Output "No wheel files found in target\release\wheels either"
+              }
+          }
 
-      - name: Build Windows wheel
-        run: maturin build --release --python-requires "==3.10.*"
-
-      - name: Upload artifact
+      - name: Upload wheels as artifact
         uses: actions/upload-artifact@v4
         with:
           name: wheels-windows
@@ -105,23 +132,50 @@ jobs:
             target\wheels\*.whl
             target\release\wheels\*.whl
 
-  publish:
-    needs: [build-linux, build-macos, build-windows]
+  publish-to-pypi:
+    needs: [build-ubuntu, build-macos, build-windows]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download artifacts
-        run: |
-          mkdir -p dist
-          gh run download $GITHUB_RUN_ID -n wheels-linux -D dist
-          gh run download $GITHUB_RUN_ID -n wheels-macos -D dist
-          gh run download $GITHUB_RUN_ID -n wheels-windows -D dist
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11.3
 
-      - name: Publish to PyPI
+      - name: Install maturin
+        run: pip install maturin
+
+      - name: Download Ubuntu wheels
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-ubuntu
+          path: dist/
+
+      - name: Download macOS wheels
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-macos
+          path: dist/
+
+      - name: Download Windows wheels
+        uses: actions/download-artifact@v4
+        with:
+          name: wheels-windows
+          path: dist/
+
+      - name: Flatten wheel files
+        run: |
+          mkdir -p dist/flat
+          find dist -name '*.whl' -exec cp {} dist/flat/ \;
+          mv dist/flat/*.whl dist/ || true
+          rm -rf dist/flat
+
+      - name: List all wheels
+        run: ls -lh dist/*.whl || echo "No wheel files found"
+
+      - name: Upload all wheels to PyPI
         env:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-        run: |
-          pip install maturin
-          maturin upload --skip-existing dist/*.whl
+        run: maturin upload --skip-existing dist/*.whl
