--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Install maturin
         run: pip install maturin
 
-      - name: Build Rust Python extension
-        run: maturin build --release
+      - name: Build Rust Python extension (abi3)
+        run: maturin build --release --interpreter python3.11
 
       - name: List generated wheel files
         run: ls -lh target/wheels/*.whl || echo "No wheel files found"
@@ -69,8 +69,8 @@ jobs:
       - name: Install maturin
         run: pip install maturin
 
-      - name: Build Rust Python extension
-        run: maturin build --release
+      - name: Build Rust Python extension (abi3)
+        run: maturin build --release --interpreter python3.11
 
       - name: List generated wheel files
         run: ls -lh target/wheels/*.whl || echo "No wheel files found"
@@ -105,8 +105,8 @@ jobs:
       - name: Install maturin
         run: python -m pip install maturin
 
-      - name: Build Rust Python extension
-        run: python -m maturin build --release
+      - name: Build Rust Python extension (abi3)
+        run: maturin build --release --interpreter python3.11
 
       - name: List generated wheel files
         run: |
