--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,5 +21,7 @@ Repository = "https://github.com/KAY53N/rusty-req"
 Documentation = "https://github.com/KAY53N/rusty-req#readme"
 
 [tool.maturin]
+python-source = false
 bindings = "pyo3"
 module-name = "rusty_req"
+compatibility = "manylinux2014"
