--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,27 +11,30 @@ on:
 jobs:
   build-linux:
     runs-on: ubuntu-latest
-    container: quay.io/pypa/manylinux_2_28_x86_64
+    container:
+      image: quay.io/pypa/manylinux2014_x86_64
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Rust
-        run: |
-          curl https://sh.rustup.rs -sSf | sh -s -- -y
-          source $HOME/.cargo/env
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-      - name: Build wheels for multiple Python versions
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Install maturin
+        run: pip install maturin
+
+      - name: Build wheels
         run: |
           for PYBIN in /opt/python/cp3{10,11,12}*/bin; do
-            "${PYBIN}/pip" install maturin
-            "${PYBIN}/maturin" build --release --compatibility manylinux2014 --interpreter "${PYBIN}/python"
+            "${PYBIN}/pip" wheel . -w wheelhouse/
           done
-
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-linux
-          path: target/wheels/*.whl
 
   build-macos:
     runs-on: macos-latest
