--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,4 @@ Documentation = "https://github.com/KAY53N/rusty-req#readme"
 [tool.maturin]
 bindings = "pyo3"
 module-name = "rusty_req"
+compatibility = "manylinux2014"
