--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,26 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Build wheels using maturin in docker
+        uses: PyO3/maturin-action@v1
         with:
-          python-version: "3.10"
-
-      - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-
-      - name: Install maturin
-        run: |
-          pip install --upgrade pip
-          pip install maturin
-
-      - name: Build wheel
-        run: |
-          maturin build --release -o dist
-
+          manylinux: manylinux2014
+          command: build
+          args: --release --out dist
 
   build-macos:
     runs-on: macos-latest
