--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ Repository = "https://github.com/KAY53N/rusty-req"
 Documentation = "https://github.com/KAY53N/rusty-req#readme"
 
 [tool.maturin]
-bindings = "pyo3"
+abi3-py-version = "3.7"
+bindings = "pyo3-abi3"
 module-name = "rusty_req"
 compatibility = "manylinux2014"
