--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install OpenSSL dev packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libssl-dev pkg-config
+
       - name: Build wheels using maturin in docker
         uses: PyO3/maturin-action@v1
         with:
@@ -23,6 +28,7 @@ jobs:
         env:
           RUST_BACKTRACE: 1
           CARGO_TERM_COLOR: always
+
 
   build-macos:
     runs-on: macos-latest
