--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install OpenSSL dev packages
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libssl-dev pkg-config
+      - name: Install OpenSSL dev packages on runner
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev pkg-config
 
-      - name: Build wheels using maturin in docker
+      - name: Build wheels using maturin in manylinux2014 container
         uses: PyO3/maturin-action@v1
         with:
           manylinux: manylinux2014
