--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,11 @@ jobs:
           toolchain: stable
           override: true
 
+      - name: Add macOS targets
+        run: |
+          rustup target add x86_64-apple-darwin
+          rustup target add aarch64-apple-darwin
+
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -80,7 +85,6 @@ jobs:
         with:
           name: wheels-macos
           path: target/wheels/*.whl
-
 
   build-windows:
     runs-on: windows-latest
