--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ features = [ "full",]
 [dependencies.reqwest]
 version = "0.11"
 features = [ "json", "brotli", "gzip", "deflate", "stream",]
+
+[package.metadata.maturin]
+supported-python-versions = ["3.8", "3.9", "3.10", "3.11", "3.12"]
