--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "rusty-req"
 version = "0.2.0"
 edition = "2021"
+license = "MIT"  # 这里必须明确指定
 
 [dependencies]
 serde_json = "1.0"
@@ -11,19 +12,19 @@ once_cell = "1.18"
 
 [dependencies.pyo3]
 version = "0.20"
-features = [ "extension-module",]
+features = ["extension-module"]
 
 [dependencies.pyo3-asyncio]
 version = "0.20"
-features = [ "tokio-runtime",]
+features = ["tokio-runtime"]
 
 [dependencies.tokio]
 version = "1.0"
-features = [ "full",]
+features = ["full"]
 
 [dependencies.reqwest]
 version = "0.11"
-features = [ "json", "brotli", "gzip", "deflate", "stream",]
+features = ["json", "brotli", "gzip", "deflate", "stream"]
 
 [package.metadata.maturin]
 supported-python-versions = ["3.8", "3.9", "3.10", "3.11", "3.12"]
