--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,4 @@
+# pyproject.toml
 [build-system]
 requires = ["maturin==0.13.7"]
 build-backend = "maturin"
@@ -7,7 +8,7 @@ name = "rusty-req"
 version = "0.2.0"
 description = "High-performance async HTTP client built with Rust for Python."
 readme = "README.md"
-license = "MIT"  # ✅ 合法字段，没问题
+license = "MIT"
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python",
