--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - run: pip install maturin==0.13.7
+      - run: pip install maturin
       - run: maturin build --release --interpreter python${{ matrix.python-version }}
       - uses: actions/upload-artifact@v4
         with:
@@ -36,33 +36,48 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
+
       - name: Add macOS targets
         run: |
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
-      - uses: actions/setup-python@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - run: pip install maturin==0.13.7 delocate
+
+      - name: Install maturin and delocate
+        run: pip install maturin delocate
+
       - name: Build x86_64 wheel
         run: |
           mkdir -p target/wheels/x86_64
           maturin build --release --target x86_64-apple-darwin --interpreter python${{ matrix.python-version }}
           mv target/wheels/*.whl target/wheels/x86_64/
+
       - name: Build aarch64 wheel
         run: |
           mkdir -p target/wheels/aarch64
           maturin build --release --target aarch64-apple-darwin --interpreter python${{ matrix.python-version }}
           mv target/wheels/*.whl target/wheels/aarch64/
+
       - name: Create universal2 wheel
         run: |
+          pip install delocate
           mkdir -p target/wheels/universal
-          delocate-merge -w target/wheels/universal target/wheels/x86_64/*.whl target/wheels/aarch64/*.whl
+          delocate-merge \
+            -w target/wheels/universal \
+            target/wheels/x86_64/*.whl \
+            target/wheels/aarch64/*.whl
           mv target/wheels/universal/*.whl target/wheels/
+
       - uses: actions/upload-artifact@v4
         with:
           name: wheels-macos-py${{ matrix.python-version }}
@@ -82,7 +97,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - run: python -m pip install maturin==0.13.7
+      - run: python -m pip install maturin
       - run: python -m maturin build --release --interpreter python${{ matrix.python-version }}
       - uses: actions/upload-artifact@v4
         with:
@@ -95,19 +110,23 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
         with:
           path: dist
           pattern: wheels-*
           merge-multiple: true
+
       - name: Collect all .whl files to final_dist
         run: |
           mkdir -p final_dist
           find dist -type f -name "*.whl" -exec mv {} final_dist/ \;
+
       - name: Check wheels with twine
         run: |
           pip install twine
           twine check final_dist/*.whl
+
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
