--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "rusty-req"
 version = "0.2.0"
 description = "High-performance async HTTP client built with Rust for Python."
 readme = "README.md"
-license = "MIT"
+license = { text = "MIT" }
 requires-python = ">=3.8"
 classifiers = [
     "Programming Language :: Python",
