--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,26 +1,20 @@
-# pyproject.toml
 [build-system]
-requires = ["maturin==0.13.7"]
+requires = [ "maturin==0.13.7",]
 build-backend = "maturin"
 
 [project]
 name = "rusty-req"
-version = "0.2.0"
+version = "0.2.1"
 description = "High-performance async HTTP client built with Rust for Python."
 readme = "README.md"
-license = { text = "MIT" }
 requires-python = ">=3.8"
-classifiers = [
-    "Programming Language :: Python",
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Rust",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
-
+classifiers = [ "Programming Language :: Python", "Programming Language :: Python :: 3", "Programming Language :: Rust", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
 [[project.authors]]
 name = "KAY53N"
 email = "kaysen820@gmail.com"
+
+[project.license]
+text = "MIT"
 
 [project.urls]
 Homepage = "https://github.com/KAY53N/rusty-req"
