--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,11 +17,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Python ${{ matrix.python-version }}
-        run: /opt/python/cp${{ matrix.python-version | replace('.', '') }}-cp${{ matrix.python-version | replace('.', '') }}*/bin/pip install maturin
-
-      - name: Build wheel with maturin
-        run: /opt/python/cp${{ matrix.python-version | replace('.', '') }}-cp${{ matrix.python-version | replace('.', '') }}*/bin/maturin build --release --manylinux 2_28 --interpreter /opt/python/cp${{ matrix.python-version | replace('.', '') }}-cp${{ matrix.python-version | replace('.', '') }}*/bin/python
+      - name: Set up Python and build wheel
+        run: |
+          PYTHON_VERSION="${{ matrix.python-version }}"
+          PYTHON_TAG="cp${PYTHON_VERSION/./}"  # 3.11 -> cp311
+          PYTHON_BIN="/opt/python/${PYTHON_TAG}-${PYTHON_TAG}*/bin"
+  
+          ${PYTHON_BIN}/pip install maturin
+  
+          ${PYTHON_BIN}/maturin build --release --manylinux 2_28 --interpreter ${PYTHON_BIN}/python
 
       - uses: actions/upload-artifact@v4
         with:
