--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,14 +17,20 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install Rust
+        run: |
+          curl https://sh.rustup.rs -sSf | sh -s -- -y
+          source $HOME/.cargo/env
+          echo 'export PATH="$HOME/.cargo/bin:$PATH"' >> ~/.bashrc
+
       - name: Set up Python and build wheel
         run: |
+          source $HOME/.cargo/env
           PYTHON_VERSION="${{ matrix.python-version }}"
-          PYTHON_TAG="cp${PYTHON_VERSION/./}"  # 3.11 -> cp311
-          PYTHON_BIN="/opt/python/${PYTHON_TAG}-${PYTHON_TAG}*/bin"
+          PYTHON_TAG="cp${PYTHON_VERSION/./}"
+          PYTHON_BIN=$(find /opt/python/ -maxdepth 1 -type d -name "${PYTHON_TAG}-${PYTHON_TAG}*" | head -n 1)/bin
   
-          ${PYTHON_BIN}/pip install maturin
-  
+          ${PYTHON_BIN}/pip install maturin==1.9.2
           ${PYTHON_BIN}/maturin build --release --manylinux 2_28 --interpreter ${PYTHON_BIN}/python
 
       - uses: actions/upload-artifact@v4
