--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,25 @@ jobs:
         run: |
           curl https://sh.rustup.rs -sSf | sh -s -- -y
           source $HOME/.cargo/env
-          echo 'export PATH="$HOME/.cargo/bin:$PATH"' >> ~/.bashrc
+          echo 'export PATH=$HOME/.cargo/bin:$PATH' >> ~/.bashrc
 
-      - name: Set up Python and build wheel
+      - name: Set up Python & Build Wheel
+        shell: bash
         run: |
           source $HOME/.cargo/env
-          PYTHON_VERSION="${{ matrix.python-version }}"
-          PYTHON_TAG="cp${PYTHON_VERSION/./}"
-          PYTHON_BIN=$(find /opt/python/ -maxdepth 1 -type d -name "${PYTHON_TAG}-${PYTHON_TAG}*" | head -n 1)/bin
+  
+          # 生成 Python 解释器路径（如 cp311-cp311）
+          PYTHON_VERSION=${{ matrix.python-version }}
+          PYTHON_TAG="cp${PYTHON_VERSION/./}"  # e.g. "3.11" -> "cp311"
+  
+          # 找到对应解释器的路径
+          PYTHON_DIR=$(find /opt/python -maxdepth 1 -type d -name "${PYTHON_TAG}-${PYTHON_TAG}" | head -n 1)
+          PYTHON_BIN="${PYTHON_DIR}/bin"
+  
+          echo "Using Python from: ${PYTHON_BIN}"
   
           ${PYTHON_BIN}/pip install maturin==1.9.2
+  
           ${PYTHON_BIN}/maturin build --release --manylinux 2_28 --interpreter ${PYTHON_BIN}/python
 
       - uses: actions/upload-artifact@v4
