--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install system dependencies
+        run: |
+          microdnf install -y openssl-devel pkg-config
+
       - name: Install Rust
         run: |
           curl https://sh.rustup.rs -sSf | sh -s -- -y
@@ -26,12 +30,11 @@ jobs:
       - name: Set up Python & Build Wheel
         shell: bash
         run: |
-          set -x  # 打印每条命令
           source $HOME/.cargo/env
-          
+  
           PYTHON_VERSION=${{ matrix.python-version }}
           PYTHON_TAG="cp${PYTHON_VERSION/./}-cp${PYTHON_VERSION/./}"
-          
+  
           PYTHON_DIR=""
           for dir in /opt/python/${PYTHON_TAG}*; do
             if [[ -d "$dir" ]]; then
@@ -39,25 +42,20 @@ jobs:
               break
             fi
           done
-          
+  
           if [[ -z "$PYTHON_DIR" ]]; then
             echo "❌ 没找到解释器目录 /opt/python/${PYTHON_TAG}*"
             ls -1 /opt/python
             exit 1
           fi
-          
+  
           PYTHON_BIN="${PYTHON_DIR}/bin"
           echo "✅ 使用解释器路径: ${PYTHON_BIN}"
-          
+  
           ${PYTHON_BIN}/pip install --upgrade pip
           ${PYTHON_BIN}/pip install maturin==1.9.2
-          
+  
           ${PYTHON_BIN}/maturin build --release --manylinux 2_28 --interpreter ${PYTHON_BIN}/python
-
-      - uses: actions/upload-artifact@v4
-        with:
-          name: wheels-linux-py${{ matrix.python-version }}
-          path: target/wheels/*.whl
 
   build-macos:
     runs-on: macos-latest
