--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["maturin==1.9.2"]
+requires = [ "maturin==1.9.2",]
 build-backend = "maturin"
 
 [project]
 name = "rusty-req"
-version = "0.2.1"
+version = "0.2.2"
 description = "High-performance async HTTP client built with Rust for Python."
 readme = "README.md"
 requires-python = ">=3.8"
